# c-utf8

./: AUTHORS  COPYING  NEWS.md  README  README.md  meson.build
.github/workflows/: ci.yml
src/: bench-ascii.c  bench-multibyte.c  c-utf8.c  c-utf8.h  libcutf8.sym  meson.build  test-api.c  test-basic.c  trivial-utf8.c  trivial-utf8.h
